[project]
name = "ncm2mp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "pycryptodome>=3.23.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
